--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: fenxiang gushi
-subtitle: Walk steps step by step
-description: 感兴趣的故事与图片
+title: 新星 - 网络上的焦点故事和图片
+subtitle: 网络上的焦点故事和图片
+description: 在网络上阅读最新的故事，并与其他人讨论
 author: dongf800
 email: 1067431922@qq.com
 language: zh-CN
