--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: 新星 - 网络上的焦点故事和图片
-subtitle: 网络上的焦点故事和图片
+title: 焦点故事和图片
+subtitle: Walk steps step by step
 description: 在网络上阅读最新的故事，并与其他人讨论
 author: dongf800
 email: 1067431922@qq.com
