--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: 美食&服饰
+title: Trending Stories and Pictures
 subtitle: Walk steps step by step
-description: 在网络上阅读最新的故事并与他人分享美食
+description: Trending Stories and Pictures Around the Web
 author: dongf800
 email: 1067431922@qq.com
 language: zh-CN
